# pzep

./: AUTOVERSION.txt  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Doxyfile  LICENSE  NOTES.md  README.md  README_REPL.md  REPL_IMPLEMENTATION_SUMMARY.md  SPECIFICATION.md  VERSION_TEST.md  Zep.slnx  build.sh  build_freebsd.sh  build_linux.sh  commit495.diff  config_app.h  diff1.txt  diff616.txt  install_duktape.bat  mode_b2cd.txt  mode_diff.txt  mode_diff1.txt  mode_diff2.txt  mode_diff616.txt  mode_log.txt  notification_app.cpp  notifications.h  notifications_imgui.h  notifications_term.h  test_repl_providers.cpp  theme.cpp  unicode_test.txt  version.h  win_log.txt  window_head.cpp
.github/: FUNDING.yml
.kilo/plans/: 1776888112450-quick-panda.md
apps/pzep-gui/: CMakeLists.txt  main.cpp  version_dialog.cpp
build-lin/: build.sh
build-new/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  Zep.sln  cmake_install.cmake
build-new/demos/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
build-new/src/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  Zep.vcxproj  Zep.vcxproj.filters  cmake_install.cmake
build-new/tests/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
build-pzep-gui/: ALL_BUILD.vcxproj  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  Zep.sln  Zep.slnx  cmake_install.cmake
build-pzep-gui/demos/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
build-pzep-gui/src/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  Zep.vcxproj  Zep.vcxproj.filters  cmake_install.cmake
build-pzep-gui/tests/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
build-win/: ALL_BUILD.vcxproj  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  Zep.sln  cmake_install.cmake  config_app.h
build-win/demos/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
build-win/src/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  Zep.vcxproj  Zep.vcxproj.filters  cmake_install.cmake
build-win/tests/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  unittests.sln  unittests.vcxproj  unittests.vcxproj.filters
cmake/: git_version.cmake
demos/demo_imgui/: CMakeLists.txt
docs/: FTXUI_ANALYSIS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  NCURSES_ANALYSIS.md  NOTIFICATIONS_ARCHITECTURE.md  NOTIFICATIONS_DEVELOPER_MANUAL.md  NOTIFICATIONS_USER_MANUAL.md  RAYLIB_ANALYSIS.md  REPORT.md  SECURITY_REPORT.md  TECHNICAL_DEBT_REPORT.md  TTY_SUPPORT_ANALYSIS.md  USER_GUIDE.md  VIM_COMMANDS_REPORT.md  VIM_COMMANDS_SPEC.md  VIM_COMPATIBILITY_REPORT.md  VIM_MOTIONS_SPEC.md  duktape_scripting.md  implementation_plan_native_integrations.md  lua_scripting.md  quickjs_scripting.md
include/: zep.h
include/zep/: buffer.h  commands.h  commands_font.h  commands_repl.h  commands_terminal.h  commands_tutor.h  display.h  editor.h  fold.h  git.h  keymap.h  menu_layer.h  mode.h  mode_repl.h  mode_terminal.h  mode_tutorial.h  mode_vim.h  options_dialog.h  range_markers.h  repl_capabilities.h  repl_plugin.h  repl_plugin_loader.h  (+7 more)
notification_app/: CMakeLists.txt
notification_demo/: CMakeLists.txt  CMakeLists_pzep.txt  main.cpp  pzep_gui.cpp  terminal_test.cpp
plugins/: CMakeLists.txt
pzep/: README.md
pzep-gui/: README.md
pzep/pzep-gui/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  Zep.vcxproj  Zep.vcxproj.filters  buffer.cpp  cmake_install.cmake  commands.cpp  commands_font.cpp  commands_repl.cpp  commands_terminal.cpp  commands_tutor.cpp  editor.cpp  fix.ps1  fold.cpp  git.cpp  menu_layer.cpp  mode.cpp  mode_duktape_repl.cpp  mode_lua_repl.cpp  mode_quickjs_repl.cpp  mode_repl.cpp  mode_search.cpp  mode_standard.cpp  mode_terminal.cpp  mode_tutorial.cpp  mode_vim.cpp  modify.ps1  options_dialog.cpp  range_markers.cpp  regress.cpp  repl_plugin_loader.cpp  scroller.cpp  splits.cpp  tab_window.cpp  (+3 more)
src/ftxui/: display_ftxui.cpp
src/plugins/: duktape_plugin.cpp  lua_plugin.cpp  quickjs_plugin.cpp
src/raylib/: display_raylib.cpp
src/tests/: notifications.test.cpp
tests/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
(+42 files in other folders)
